# word-embeddings

./: README.md  pyproject.toml
src/word_embeddings/: data.py  loss.py  metrics.py  train_word2vec.py
src/word_embeddings/word2vec/: model.py  train.py
