[project]
name = "word-embeddings"
version = "0.1.0"
description = "Implementing popular word embeddings models such as word2vec, doc2vec, etc. using torch"
authors = [
    {name = "beekill", email = "nguyenmbquan95@gmail.com"},
]
dependencies = [
    "torch>=2.0",
    "torch-training-loop>=0.1.3",
    "torchtext>=0.17.1",
    "datasets>=2.18.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
